flex-wrap fix for small screens

--- a/src/Post.css
+++ b/src/Post.css
@@ -7,6 +7,7 @@
     margin-top: 10px;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .post-date {
